--- a/client/.env
+++ b/client/.env
@@ -3,5 +3,5 @@ VITE_CURRENCY=₹
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_cm9idXN0LWNob3ctMzcuY2xlcmsuYWNjb3VudHMuZGV2JA
 
 
-VITE_BASE_URL=https://quick-show-sand.vercel.app
+VITE_BASE_URL=https://quickshow-server-ochre.vercel.app/
 VITE_TMDB_IMAGE_BASE_URL=https://image.tmdb.org/t/p/original
